# ingestor-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ingestor/: api.py  cliente.py  config.py  modelos.py  repositorio.py  servicio.py
tests/: test_api.py  test_cliente.py  test_repositorio.py
