[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestor-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "respx>=0.21"]

[tool.setuptools]
packages = ["ingestor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
